--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet">
+<!--      Bootstrap     -->
+
+      <link rel="stylesheet" href="resources/css/bootstrap.min.css">
+      <link rel="stylesheet" href="resources/css/bootstrap-grid.min.css">
+      <link rel="stylesheet" href="resources/css/bootstrap-reboot.min.css">
+      <link rel="stylesheet" href="resources/css/bootstrap-utilities.min.css">
+
     <link rel="stylesheet" href="resources/css/style.css">
+
+      <!--Bootstrap JS-->
+      <script src="resources/js/jquery.min.js"></script>
+      <script src="resources/js/bootstrap.min.js"></script>
+      <script src="resources/js/bootstrap.bundle.min.js"></script>
     <script src="resources/js/site.js"></script>
     <title>Frontend Test</title>
   </head>
