responsive issues and otp input

--- a/pages/reset-password.html
+++ b/pages/reset-password.html
@@ -38,7 +38,7 @@
                 </div>
                 <p>Please choose your new password </p>
                 <form action="../pages/verification-code.html">
-                    <div class="each__input--container d-flex flex-column position-relative" style="margin-bottom: 6px">
+                    <div class="each__input--container d-flex flex-column position-relative mb-1">
                         <label for="name">Password</label>
                         <input type="password" name="email" placeholder="********" >
                         <svg class="position-absolute" width="16" height="10" viewBox="0 0 16 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -49,7 +49,7 @@
                         <span class="bar"></span>
                         <span>Week</span>
                     </div>
-                    <div class="each__input--container d-flex flex-column position-relative" style="margin-bottom: 10px">
+                    <div class="each__input--container d-flex flex-column position-relative mb-2">
                         <label for="name">Confirm Password</label>
                         <input type="password" name="email" placeholder="Re-enter your password." >
                     </div>
