--- a/pages/verification-code.html
+++ b/pages/verification-code.html
@@ -36,14 +36,17 @@
           <h2>Verification Code</h2>
           <img class="img-fluid" src="../resources/images/logo/logo.png" alt="signin logo">
         </div>
-        <p style="margin-bottom: 47px">We send you on mail.</p>
+        <p class="mb-5">We send you on mail.</p>
         <p>We’ve send you code on john<span>****@</span>gmail.com</p>
         <form action="../pages/success.html">
-          <div class="input__group--container">
-
+          <div class="input__group--container" data-group-name="digits" data-autosubmit="false" autocomplete="off">
+            <input type="text" id="digit-1" name="digit-1" data-next="digit-2" />
+            <input type="text" id="digit-2" name="digit-2" data-next="digit-3" data-previous="digit-1" />
+            <input type="text" id="digit-3" name="digit-3" data-next="digit-4" data-previous="digit-2" />
+            <input type="text" id="digit-4" name="digit-4" data-next="digit-5" data-previous="digit-3" />
           </div>
           <button class="sign__in--btn" type="submit">Continue</button>
-          <div class="c-hr" style="margin-bottom: 24px"></div>
+          <div class="c-hr mb-3"></div>
           <p>Did not receive the email? Check your spam filter, or</p>
           <button class="secondary__btn">Resend Code</button>
         </form>
