--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -78,7 +78,7 @@
                             fill="#FF5E5E"
                     />
                 </svg>
-                <span>Log Out</span>
+                <span><a href="../index.html">Log Out</a></span>
             </li>
         </ul>
     </div>
@@ -263,6 +263,23 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer__container">
+            <div class="footer__menu--container">
+                <ul class="d-flex align-items-center">
+                    <li>About</li>
+                    <li>Team</li>
+                    <li>Contact</li>
+                </ul>
+                <div class="copyright__container">
+                    <p id="year">
+                        <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
+                        ©SaucedIt
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </div>
 
 <script>
