--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -25,6 +25,7 @@
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
     <script src="../resources/js/site.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.min.js"></script>
     <title>Dashboard</title>
 </head>
 <body>
@@ -64,7 +65,7 @@
                 <h2>Good Morning, Krishna</h2>
                 <p>Prject Admin</p>
             </li>
-            <li><i class="fa fa-user-o"></i>Account Settings</li>
+            <li><i class="fa fa-user-o"></i><a href="./account-settings.html">Account Settings</a></li>
             <li class="log__out--menu">
                 <svg
                         width="24"
@@ -93,28 +94,28 @@
                     <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM8.99 17.93C5.06 17.43 2 14.07 2 10C2 9.39 2.08 8.79 2.21 8.22L6.99 13V14C6.99 15.1 7.89 16 8.99 16V17.93ZM15.89 15.4C15.63 14.59 14.89 14 13.99 14H12.99V11C12.99 10.45 12.54 10 11.99 10H5.99V8H7.99C8.54 8 8.99 7.55 8.99 7V5H10.99C12.09 5 12.99 4.1 12.99 3V2.59C15.92 3.77 18 6.65 18 10C18 12.08 17.19 13.98 15.89 15.4Z"
                           fill="#F16532"/>
                 </svg>
-                <span>Dashboard</span>
+                <span><a href="./dashboard.html">Dashboard</a></span>
             </li>
             <li class="each__menu--item">
                 <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M11.3 9.22C11.8336 8.75813 12.2616 8.18688 12.5549 7.54502C12.8482 6.90316 13 6.20571 13 5.5C13 4.17392 12.4732 2.90215 11.5355 1.96447C10.5979 1.02678 9.32608 0.5 8 0.5C6.67392 0.5 5.40215 1.02678 4.46447 1.96447C3.52678 2.90215 3 4.17392 3 5.5C2.99999 6.20571 3.1518 6.90316 3.44513 7.54502C3.73845 8.18688 4.16642 8.75813 4.7 9.22C3.30014 9.85388 2.11247 10.8775 1.27898 12.1685C0.445495 13.4596 0.00147185 14.9633 0 16.5C0 16.7652 0.105357 17.0196 0.292893 17.2071C0.48043 17.3946 0.734784 17.5 1 17.5C1.26522 17.5 1.51957 17.3946 1.70711 17.2071C1.89464 17.0196 2 16.7652 2 16.5C2 14.9087 2.63214 13.3826 3.75736 12.2574C4.88258 11.1321 6.4087 10.5 8 10.5C9.5913 10.5 11.1174 11.1321 12.2426 12.2574C13.3679 13.3826 14 14.9087 14 16.5C14 16.7652 14.1054 17.0196 14.2929 17.2071C14.4804 17.3946 14.7348 17.5 15 17.5C15.2652 17.5 15.5196 17.3946 15.7071 17.2071C15.8946 17.0196 16 16.7652 16 16.5C15.9985 14.9633 15.5545 13.4596 14.721 12.1685C13.8875 10.8775 12.6999 9.85388 11.3 9.22ZM8 8.5C7.40666 8.5 6.82664 8.32405 6.33329 7.99441C5.83994 7.66476 5.45542 7.19623 5.22836 6.64805C5.0013 6.09987 4.94189 5.49667 5.05764 4.91473C5.1734 4.33279 5.45912 3.79824 5.87868 3.37868C6.29824 2.95912 6.83279 2.6734 7.41473 2.55764C7.99667 2.44189 8.59987 2.5013 9.14805 2.72836C9.69623 2.95542 10.1648 3.33994 10.4944 3.83329C10.8241 4.32664 11 4.90666 11 5.5C11 6.29565 10.6839 7.05871 10.1213 7.62132C9.55871 8.18393 8.79565 8.5 8 8.5ZM17.74 8.82C18.38 8.09933 18.798 7.20905 18.9438 6.25634C19.0896 5.30362 18.9569 4.32907 18.5618 3.45C18.1666 2.57093 17.5258 1.8248 16.7165 1.30142C15.9071 0.77805 14.9638 0.499742 14 0.5C13.7348 0.5 13.4804 0.605357 13.2929 0.792893C13.1054 0.98043 13 1.23478 13 1.5C13 1.76522 13.1054 2.01957 13.2929 2.20711C13.4804 2.39464 13.7348 2.5 14 2.5C14.7956 2.5 15.5587 2.81607 16.1213 3.37868C16.6839 3.94129 17 4.70435 17 5.5C16.9986 6.02524 16.8593 6.5409 16.5961 6.99542C16.3328 7.44994 15.9549 7.82738 15.5 8.09C15.3517 8.17552 15.2279 8.29766 15.1404 8.44474C15.0528 8.59182 15.0045 8.7589 15 8.93C14.9958 9.09976 15.0349 9.2678 15.1137 9.41826C15.1924 9.56872 15.3081 9.69665 15.45 9.79L15.84 10.05L15.97 10.12C17.1754 10.6917 18.1923 11.596 18.901 12.7263C19.6096 13.8566 19.9805 15.1659 19.97 16.5C19.97 16.7652 20.0754 17.0196 20.2629 17.2071C20.4504 17.3946 20.7048 17.5 20.97 17.5C21.2352 17.5 21.4896 17.3946 21.6771 17.2071C21.8646 17.0196 21.97 16.7652 21.97 16.5C21.9782 14.9654 21.5938 13.4543 20.8535 12.1101C20.1131 10.7659 19.0413 9.63331 17.74 8.82Z"
                           fill="#F16532"/>
                 </svg>
-                <span>Payroll Entries</span>
+                <span><a href="#">Payroll Entries</a></span>
             </li>
             <li class="each__menu--item">
                 <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M11.3 9.22C11.8336 8.75813 12.2616 8.18688 12.5549 7.54502C12.8482 6.90316 13 6.20571 13 5.5C13 4.17392 12.4732 2.90215 11.5355 1.96447C10.5979 1.02678 9.32608 0.5 8 0.5C6.67392 0.5 5.40215 1.02678 4.46447 1.96447C3.52678 2.90215 3 4.17392 3 5.5C2.99999 6.20571 3.1518 6.90316 3.44513 7.54502C3.73845 8.18688 4.16642 8.75813 4.7 9.22C3.30014 9.85388 2.11247 10.8775 1.27898 12.1685C0.445495 13.4596 0.00147185 14.9633 0 16.5C0 16.7652 0.105357 17.0196 0.292893 17.2071C0.48043 17.3946 0.734784 17.5 1 17.5C1.26522 17.5 1.51957 17.3946 1.70711 17.2071C1.89464 17.0196 2 16.7652 2 16.5C2 14.9087 2.63214 13.3826 3.75736 12.2574C4.88258 11.1321 6.4087 10.5 8 10.5C9.5913 10.5 11.1174 11.1321 12.2426 12.2574C13.3679 13.3826 14 14.9087 14 16.5C14 16.7652 14.1054 17.0196 14.2929 17.2071C14.4804 17.3946 14.7348 17.5 15 17.5C15.2652 17.5 15.5196 17.3946 15.7071 17.2071C15.8946 17.0196 16 16.7652 16 16.5C15.9985 14.9633 15.5545 13.4596 14.721 12.1685C13.8875 10.8775 12.6999 9.85388 11.3 9.22ZM8 8.5C7.40666 8.5 6.82664 8.32405 6.33329 7.99441C5.83994 7.66476 5.45542 7.19623 5.22836 6.64805C5.0013 6.09987 4.94189 5.49667 5.05764 4.91473C5.1734 4.33279 5.45912 3.79824 5.87868 3.37868C6.29824 2.95912 6.83279 2.6734 7.41473 2.55764C7.99667 2.44189 8.59987 2.5013 9.14805 2.72836C9.69623 2.95542 10.1648 3.33994 10.4944 3.83329C10.8241 4.32664 11 4.90666 11 5.5C11 6.29565 10.6839 7.05871 10.1213 7.62132C9.55871 8.18393 8.79565 8.5 8 8.5ZM17.74 8.82C18.38 8.09933 18.798 7.20905 18.9438 6.25634C19.0896 5.30362 18.9569 4.32907 18.5618 3.45C18.1666 2.57093 17.5258 1.8248 16.7165 1.30142C15.9071 0.77805 14.9638 0.499742 14 0.5C13.7348 0.5 13.4804 0.605357 13.2929 0.792893C13.1054 0.98043 13 1.23478 13 1.5C13 1.76522 13.1054 2.01957 13.2929 2.20711C13.4804 2.39464 13.7348 2.5 14 2.5C14.7956 2.5 15.5587 2.81607 16.1213 3.37868C16.6839 3.94129 17 4.70435 17 5.5C16.9986 6.02524 16.8593 6.5409 16.5961 6.99542C16.3328 7.44994 15.9549 7.82738 15.5 8.09C15.3517 8.17552 15.2279 8.29766 15.1404 8.44474C15.0528 8.59182 15.0045 8.7589 15 8.93C14.9958 9.09976 15.0349 9.2678 15.1137 9.41826C15.1924 9.56872 15.3081 9.69665 15.45 9.79L15.84 10.05L15.97 10.12C17.1754 10.6917 18.1923 11.596 18.901 12.7263C19.6096 13.8566 19.9805 15.1659 19.97 16.5C19.97 16.7652 20.0754 17.0196 20.2629 17.2071C20.4504 17.3946 20.7048 17.5 20.97 17.5C21.2352 17.5 21.4896 17.3946 21.6771 17.2071C21.8646 17.0196 21.97 16.7652 21.97 16.5C21.9782 14.9654 21.5938 13.4543 20.8535 12.1101C20.1131 10.7659 19.0413 9.63331 17.74 8.82Z"
                           fill="#F16532"/>
                 </svg>
-                <span>Employes</span>
+                <span><a href="#">Employees</a></span>
             </li>
             <li class="each__menu--item dropdown__menu" id="dropdown">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM8.99 17.93C5.06 17.43 2 14.07 2 10C2 9.39 2.08 8.79 2.21 8.22L6.99 13V14C6.99 15.1 7.89 16 8.99 16V17.93ZM15.89 15.4C15.63 14.59 14.89 14 13.99 14H12.99V11C12.99 10.45 12.54 10 11.99 10H5.99V8H7.99C8.54 8 8.99 7.55 8.99 7V5H10.99C12.09 5 12.99 4.1 12.99 3V2.59C15.92 3.77 18 6.65 18 10C18 12.08 17.19 13.98 15.89 15.4Z"
                           fill="#F16532"/>
                 </svg>
-                <span>Job Listings</span>
+                <span><a href="#">Job Listings</a></span>
                 <svg width="14" height="8" viewBox="0 0 14 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
                             d="M1 1L6.29289 6.29289C6.68342 6.68342 7.31658 6.68342 7.70711 6.29289L13 1"
@@ -128,14 +129,14 @@
                 <div class="position-absolute left__border--line"></div>
                 <ul>
                     <li class="dropdown__menu--item">
-                        <span>Active</span>
+                        <span><a href="#">Active</a></span>
                     </li>
                     <li class="dropdown__menu--item">
-                        <span>Draft</span>
+                        <span><a href="#">Draft</a></span>
                     </li>
                     </li>
                     <li class="dropdown__menu--item">
-                        <span>Archived</span>
+                        <span><a href="#">Archived</a></span>
                     </li>
                 </ul>
             </li>
@@ -157,7 +158,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <span>Event Register</span>
+                <span><a href="#">Event Register</a></span>
             </li>
             <li class="each__menu--item menu__item--active">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -174,7 +175,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <span>Performance Management</span>
+                <span><a href="#">Performance Management</a></span>
             </li>
             <li class="each__menu--item">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -191,7 +192,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <span>Jobs Board</span>
+                <span><a href="#">Jobs Board</a></span>
             </li>
         </ul>
     </div>
@@ -262,6 +263,49 @@
                 </div>
             </div>
         </div>
+        <div class="row mo-0">
+            <div class="col-lg-7 col-md-7 col-12">
+                <div class="bar__chart--container">
+                    <div class="bar__chart--top d-flex justify-content-between align-items-center">
+                        <div class="chart__top--left">
+                            <p>Total Growth</p>
+                            <h3>$2,324.00</h3>
+                        </div>
+                        <div class="chart__top--right">
+                            <select name="day" id="day">
+                                <option value="0">Today</option>
+                                <option value="1">Tomorrow</option>
+                                <option value="2">Yesterday</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="chart__bar">
+                        <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1 12H17C17.55 12 18 11.55 18 11C18 10.45 17.55 10 17 10H1C0.45 10 0 10.45 0 11C0 11.55 0.45 12 1 12ZM1 7H17C17.55 7 18 6.55 18 6C18 5.45 17.55 5 17 5H1C0.45 5 0 5.45 0 6C0 6.55 0.45 7 1 7ZM0 1C0 1.55 0.45 2 1 2H17C17.55 2 18 1.55 18 1C18 0.45 17.55 0 17 0H1C0.45 0 0 0.45 0 1Z" fill="#616161"/>
+                        </svg>
+                    </div>
+                    <div class="chart__container">
+                        <canvas id="barChart"></canvas>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5 col-md-5 col-12">
+                <div class="line__chart--container">
+                    <div class="line__chart--top">
+                        <h3>Popular Stocks</h3>
+                        <svg width="12" height="3" viewBox="0 0 12 3" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2.00008 0.166748C1.26675 0.166748 0.666748 0.766748 0.666748 1.50008C0.666748 2.23341 1.26675 2.83341 2.00008 2.83341C2.73341 2.83341 3.33341 2.23341 3.33341 1.50008C3.33341 0.766748 2.73341 0.166748 2.00008 0.166748ZM10.0001 0.166748C9.26675 0.166748 8.66675 0.766748 8.66675 1.50008C8.66675 2.23341 9.26675 2.83341 10.0001 2.83341C10.7334 2.83341 11.3334 2.23341 11.3334 1.50008C11.3334 0.766748 10.7334 0.166748 10.0001 0.166748ZM6.00008 0.166748C5.26675 0.166748 4.66675 0.766748 4.66675 1.50008C4.66675 2.23341 5.26675 2.83341 6.00008 2.83341C6.73341 2.83341 7.33341 2.23341 7.33341 1.50008C7.33341 0.766748 6.73341 0.166748 6.00008 0.166748Z" fill="#616161"/>
+                        </svg>
+                    </div>
+                    <div class="chart__bg position-relative">
+                        <span class="line__heading">Bajaj Finserv</span>
+                        <span class="line__per">10% Profit</span>
+                        <span class="line_amount">$1839.00</span>
+                        <canvas id="myChart"></canvas>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <div class="footer__container">
@@ -309,6 +353,141 @@
     document.querySelector("#navBar").addEventListener('click', function () {
         document.querySelector("#navBar").classList.toggle('cross__menu--bar')
     })
+
+
+
+    /*Bar Chart Start*/
+
+
+    var barChartData = {
+        labels: ["Jan", "Feb", "Mar", "Apr", "May", "Jun"],
+        datasets: [
+            {
+                label: 'Maintenance',
+                backgroundColor: "#EDE7F6",
+                data: [140,
+                    691,
+                    636,
+                    662,
+                    686,
+                    668
+                ]
+            },{
+            label: 'Investment',
+            backgroundColor: "#90CAF9",
+            data: [140,
+                180,
+                636,
+                662,
+                686,
+                668
+            ]
+        }, {
+            label: 'Loss',
+            backgroundColor: "##2196F3",
+            data: [140,
+                50,
+                156,
+                184,
+                186,
+                142
+            ]
+        }, {
+            label: 'Profit',
+            backgroundColor: "#673AB7",
+            data: [140,
+                200,
+                166,
+                125,
+                112,
+                122
+            ]
+        }]
+    };
+
+    var barchart = document.getElementById("barChart").getContext("2d");
+    window.myBar = new Chart(barchart, {
+        responsive:true,
+        type: 'bar',
+        data: barChartData,
+        options: {
+            title: {
+                display: true,
+                text: "",
+            },
+            legend: {
+                position: "bottom"
+            },
+            tooltips: {
+                mode: 'label'
+            },
+            scales: {
+                xAxes: [{
+                    stacked: true,
+                    barPercentage: 0.4
+                }],
+                yAxes: [{
+                    stacked: true
+                }]
+            }
+        }
+    });
+
+
+    /*Bar Chart End*/
+
+    /*Line Chart Start*/
+
+    var linechart = document.getElementById('myChart').getContext("2d");
+
+    var myChart = new Chart(linechart, {
+        type: 'line',
+        data: {
+            labels: ["JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL"],
+            datasets: [{
+                label: "Data",
+                borderColor: "#80b6f4",
+                pointBorderColor: "#80b6f4",
+                pointBackgroundColor: "#80b6f4",
+                pointHoverBackgroundColor: "#5E35B1",
+                pointHoverBorderColor: "#80b6f4",
+                pointBorderWidth: 0,
+                pointHoverRadius: 5,
+                pointHoverBorderWidth: 1,
+                pointRadius: 1,
+                fill: true,
+                borderWidth: 1,
+                data: [10, 12, 15, 17, 18, 17, 16]
+            }]
+        },
+        options: {
+            legend: {
+                display: false
+            },
+            scales: {
+                yAxes: [{
+                    ticks: {
+                        display: false,
+                    },
+                    gridLines: {
+                        drawTicks: false,
+                        display: false
+                    }
+
+                }],
+                xAxes: [{
+                    gridLines: {
+                        zeroLineColor: "transparent"
+                    },
+                    ticks: {
+                        display: false,
+                        beginAtZero:true
+                    }
+                }]
+            }
+        }
+    });
+    /*Line Chart End*/
 
 </script>
 </body>
