--- a/pages/payroll-entries.html
+++ b/pages/payroll-entries.html
@@ -258,7 +258,7 @@
         
         <div class="payroll__search--container">
             <div class="row m-0">
-                <div class="col-lg-8 col-md-12 col-12">
+                <div class="col-lg-7 col-md-12 col-12">
                     <div class="row m-0">
                         <div class="col-lg-2 col-md-2 col-2 p-0">
                             <button class="csv__download--btn">
@@ -281,7 +281,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-12 mt-lg-0 mt-sm-4">
+                <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row payroll__filter--container m-0">
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
                             <div class="chart__top--right payroll__filter--bg">
@@ -315,12 +315,87 @@
             </div>
         </div>
 
-        <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="all-payroll" role="tabpanel" aria-labelledby="nav-home-tab">1</div>
-            <div class="tab-pane fade" id="pending-payroll" role="tabpanel" aria-labelledby="nav-profile-tab">2</div>
-            <div class="tab-pane fade" id="uploaded-payroll" role="tabpanel" aria-labelledby="nav-contact-tab">3</div>
+        <div class="payroll__table--container">
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="all-payroll" role="tabpanel" aria-labelledby="nav-home-tab">
+                    <h3 class="table__heading">List</h3>
+                    <table class="table table-borderless table-responsive payroll__table">
+                        <thead>
+                            <tr>
+                                <th scope="col">
+                                    <input type="checkbox" name="" id="">
+                                </th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Occupation</th>
+                                <th scope="col">Sync Status</th>
+                                <th scope="col">Payroll Entry Status</th>
+                                <th scope="col">Payroll Entry Date</th>
+                                <th scope="col">Details Changed</th>
+                                <th scope="col">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><input type="checkbox" name=""></td>
+                                <td>Talan</td>
+                                <td>Saris</td>
+                                <td>crackerjack@gmail.com</td>
+                                <td>Barista</td>
+                                <td>Uploaded</td>
+                                <td>Uploaded</td>
+                                <td>15/02/2021</td>
+                                <td>
+                                    <spsn class="detail__edited" data-toggle="tooltip" data-placement="top" title="Detail has been edited">
+                                        <svg width="11" height="10" viewBox="0 0 11 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M5.1875 0C2.4275 0 0.1875 2.24 0.1875 5C0.1875 7.76 2.4275 10 5.1875 10C7.9475 10 10.1875 7.76 10.1875 5C10.1875 2.24 7.9475 0 5.1875 0ZM5.1875 5.5C4.9125 5.5 4.6875 5.275 4.6875 5V3C4.6875 2.725 4.9125 2.5 5.1875 2.5C5.4625 2.5 5.6875 2.725 5.6875 3V5C5.6875 5.275 5.4625 5.5 5.1875 5.5ZM5.6875 7.5H4.6875V6.5H5.6875V7.5Z" fill="#FFAB91"/>
+                                        </svg>
+                                    </spsn>
+                                </td>
+                                <td class="d-flex">
+                                    <span class="action__btn mx-2">
+                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z" fill="#F16532"/>
+                                        </svg>
+                                    </span>
+                                    <span class="action__btn">
+                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z" fill="#F16532"/>
+                                        </svg>
+                                    </span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><input type="checkbox" name=""></td>
+                                <td>Talan</td>
+                                <td>Saris</td>
+                                <td>crackerjack@gmail.com</td>
+                                <td>Barista</td>
+                                <td>Uploaded</td>
+                                <td>Uploaded</td>
+                                <td>-</td>
+                                <td>-</td>
+                                <td class="d-flex">
+                                    <span class="action__btn mx-2">
+                                        <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M15.6667 0.666504H2.33341C1.41675 0.666504 0.666748 1.4165 0.666748 2.33317V17.3332L4.00008 13.9998H15.6667C16.5834 13.9998 17.3334 13.2498 17.3334 12.3332V2.33317C17.3334 1.4165 16.5834 0.666504 15.6667 0.666504ZM15.6667 12.3332H4.00008L2.33341 13.9998V2.33317H15.6667V12.3332Z" fill="#F16532"/>
+                                        </svg>
+                                    </span>
+                                    <span class="action__btn">
+                                        <svg width="14" height="4" viewBox="0 0 14 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z" fill="#F16532"/>
+                                        </svg>
+                                    </span>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="pending-payroll" role="tabpanel" aria-labelledby="nav-profile-tab">2</div>
+                <div class="tab-pane fade" id="uploaded-payroll" role="tabpanel" aria-labelledby="nav-contact-tab">3</div>
+            </div>
         </div>
-
     </div>
 
 
