--- a/pages/filter-dropdown-list.html
+++ b/pages/filter-dropdown-list.html
@@ -272,30 +272,116 @@
                 <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
                     <div class="row payroll__filter--container m-0">
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="chart__top--right payroll__filter--bg">
-                                <select class="payroll__filter--bg" name="day" id="jobs">
-                                    <option selected value="0">Jobs</option>
-                                    <option value="1">Tomorrow</option>
-                                    <option value="2">Yesterday</option>
-                                </select>
+                            <div class="chart__top--right payroll__filter--bg position-relative" id="jobFilter">
+                                <p class="payroll__filter--bg mb-0">Jobs</p>
+                                <svg width="14" height="7" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
+                                </svg>
+                                <div class="job__filter--list" id="jobFilterContent">
+                                    <div class="filter__heading">
+                                        <span>Jobs</span>
+                                        <span>Clear</span>
+                                    </div>
+                                    <div class="payroll__search">
+                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M8.33326 7.33326H7.8066L7.61993 7.15326C8.41993 6.21993 8.83326 4.9466 8.6066 3.59326C8.29326 1.73993 6.7466 0.259929 4.87993 0.0332621C2.05993 -0.313405 -0.313405 2.05993 0.0332621 4.87993C0.259929 6.74659 1.73993 8.29326 3.59326 8.6066C4.9466 8.83326 6.21993 8.41993 7.15326 7.61993L7.33326 7.80659V8.33326L10.1666 11.1666C10.4399 11.4399 10.8866 11.4399 11.1599 11.1666C11.4333 10.8933 11.4333 10.4466 11.1599 10.1733L8.33326 7.33326ZM4.33326 7.33326C2.67326 7.33326 1.33326 5.99326 1.33326 4.33326C1.33326 2.67326 2.67326 1.33326 4.33326 1.33326C5.99326 1.33326 7.33326 2.67326 7.33326 4.33326C7.33326 5.99326 5.99326 7.33326 4.33326 7.33326Z" fill="#616161"/>
+                                        </svg>
+                                        <input type="text" name="search" id="job-search" placeholder="Search...">
+                                    </div>
+                                    <div class="filter__checkbox">
+                                        <div class="filter__group mt-2">
+                                            <input type="checkbox" name="" id="id1">
+                                            <label for="id1">Barista</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id2">
+                                            <label for="id2">Barista</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id3">
+                                            <label for="id3">Floor Manager</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id4">
+                                            <label for="id4">Bar</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id5">
+                                            <label for="id5">Waiter</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <div class="chart__top--right payroll__filter--bg">
-                                <select class="payroll__filter--bg" name="day" id="venues">
-                                    <option selected value="0">Venues</option>
-                                    <option value="1">Tomorrow</option>
-                                    <option value="2">Yesterday</option>
-                                </select>
+                            <div class="chart__top--right payroll__filter--bg position-relative" id="venusFilter">
+                                <p class="payroll__filter--bg mb-0">Venues</p>
+                                <svg width="14" height="7" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
+                                </svg>
+                                <div class="job__filter--list" id="venusFilterContent">
+                                    <div class="filter__heading">
+                                        <span>Venues</span>
+                                        <span>Clear</span>
+                                    </div>
+                                    <div class="payroll__search">
+                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M8.33326 7.33326H7.8066L7.61993 7.15326C8.41993 6.21993 8.83326 4.9466 8.6066 3.59326C8.29326 1.73993 6.7466 0.259929 4.87993 0.0332621C2.05993 -0.313405 -0.313405 2.05993 0.0332621 4.87993C0.259929 6.74659 1.73993 8.29326 3.59326 8.6066C4.9466 8.83326 6.21993 8.41993 7.15326 7.61993L7.33326 7.80659V8.33326L10.1666 11.1666C10.4399 11.4399 10.8866 11.4399 11.1599 11.1666C11.4333 10.8933 11.4333 10.4466 11.1599 10.1733L8.33326 7.33326ZM4.33326 7.33326C2.67326 7.33326 1.33326 5.99326 1.33326 4.33326C1.33326 2.67326 2.67326 1.33326 4.33326 1.33326C5.99326 1.33326 7.33326 2.67326 7.33326 4.33326C7.33326 5.99326 5.99326 7.33326 4.33326 7.33326Z" fill="#616161"/>
+                                        </svg>
+                                        <input type="text" name="search" id="venues-search" placeholder="Search...">
+                                    </div>
+                                    <div class="filter__checkbox">
+                                        <div class="filter__group mt-2">
+                                            <input type="checkbox" name="" id="id6">
+                                            <label class="mb-0" for="id6">Select All</label>
+                                        </div>
+                                        <div class="c-border mt-2 mb-2"></div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id7">
+                                            <label for="id7">Barista</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id8">
+                                            <label for="id8">Floor Manager</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id9">
+                                            <label for="id9">Bar</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="checkbox" name="" id="id10">
+                                            <label for="id10">Waiter</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-4 ps-0 p-sm-0">
-                            <div class="chart__top--right">
-                                <select name="day" id="sync">
-                                    <option selected value="0">Sync Type</option>
-                                    <option value="1">Tomorrow</option>
-                                    <option value="2">Yesterday</option>
-                                </select>
+                            <div class="chart__top--right position-relative svg__fill" id="syncFilter">
+                                <p class="mb-0">Sync Type</p>
+                                <svg width="14" height="7" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
+                                </svg>
+                                <div class="job__filter--list" id="syncFilterContent">
+                                    <div class="filter__heading">
+                                        <span>Sync</span>
+                                        <span>Clear</span>
+                                    </div>
+                                    <div class="filter__checkbox">
+                                        <div class="filter__group mt-2">
+                                            <input type="radio" name="sync" id="id11" value="KeyPay Sync">
+                                            <label for="id11">KeyPay Sync</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="radio" name="sync" id="id12" value="Xero Sync">
+                                            <label for="id12">Xero Sync</label>
+                                        </div>
+                                        <div class="filter__group">
+                                            <input type="radio" name="sync" id="id13" value="Deputy Sync">
+                                            <label for="id13">Deputy Sync</label>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
