--- a/pages/job-active.html
+++ b/pages/job-active.html
@@ -252,7 +252,7 @@
                         <thead>
                         <tr>
                             <th scope="col">
-                                <input type="checkbox" name="">
+
                             </th>
                             <th scope="col">Name of Role</th>
                             <th scope="col">Date posted</th>
@@ -264,7 +264,12 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Barista</td>
                             <td>14 July 2021</td>
                             <td>26</td>
@@ -283,7 +288,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Head Chef</td>
                             <td>14 July 2021</td>
                             <td>79</td>
@@ -296,7 +306,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Head of Operations</td>
                             <td>14 July 2021</td>
                             <td>98</td>
