--- a/pages/worksites-details.html
+++ b/pages/worksites-details.html
@@ -328,7 +328,12 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Louie</td>
                             <td>McGee</td>
                             <td>walton@saucedit.com</td>
@@ -349,7 +354,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Kadin</td>
                             <td>Press</td>
                             <td>walton@saucedit.com</td>
@@ -370,7 +380,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Roger</td>
                             <td>Vetrovs</td>
                             <td>walton@saucedit.com</td>
@@ -391,7 +406,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Miracle</td>
                             <td>Gouse</td>
                             <td>walton@saucedit.com</td>
@@ -412,7 +432,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Louie</td>
                             <td>McGee</td>
                             <td>walton@saucedit.com</td>
@@ -433,7 +458,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Kadin</td>
                             <td>Workman</td>
                             <td>walton@saucedit.com</td>
@@ -454,7 +484,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Omar</td>
                             <td>Siphron</td>
                             <td>walton@saucedit.com</td>
@@ -475,7 +510,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Miracle</td>
                             <td>Carder</td>
                             <td>walton@saucedit.com</td>
@@ -496,7 +536,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Aspen</td>
                             <td>Rhiel Madsen</td>
                             <td>walton@saucedit.com</td>
@@ -517,7 +562,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Marley</td>
                             <td>Vetrovs</td>
                             <td>walton@saucedit.com</td>
@@ -607,7 +657,12 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Louie</td>
                             <td>McGee</td>
                             <td>walton@saucedit.com</td>
@@ -634,7 +689,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Kadin</td>
                             <td>Press</td>
                             <td>walton@saucedit.com</td>
@@ -655,7 +715,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Roger</td>
                             <td>Vetrovs</td>
                             <td>walton@saucedit.com</td>
@@ -676,7 +741,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Miracle</td>
                             <td>Gouse</td>
                             <td>walton@saucedit.com</td>
@@ -697,7 +767,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Louie</td>
                             <td>McGee</td>
                             <td>walton@saucedit.com</td>
@@ -718,7 +793,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Kadin</td>
                             <td>Workman</td>
                             <td>walton@saucedit.com</td>
@@ -739,7 +819,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Omar</td>
                             <td>Siphron</td>
                             <td>walton@saucedit.com</td>
@@ -760,7 +845,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Miracle</td>
                             <td>Carder</td>
                             <td>walton@saucedit.com</td>
@@ -781,7 +871,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Aspen</td>
                             <td>Rhiel Madsen</td>
                             <td>walton@saucedit.com</td>
@@ -802,7 +897,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Marley</td>
                             <td>Vetrovs</td>
                             <td>walton@saucedit.com</td>
@@ -886,13 +986,18 @@
                             <th scope="col">Email</th>
                             <th scope="col">RSA Expiry</th>
                             <th scope="col">RCG Expiry</th>
-                            <th scope="col">COVID </th>
+                            <th scope="col">COVID</th>
                             <th scope="col">Action</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Louie</td>
                             <td>McGee</td>
                             <td>walton@saucedit.com</td>
@@ -918,7 +1023,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Kadin</td>
                             <td>Press</td>
                             <td>walton@saucedit.com</td>
@@ -944,7 +1054,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Roger</td>
                             <td>Vetrovs</td>
                             <td>walton@saucedit.com</td>
@@ -970,7 +1085,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Miracle</td>
                             <td>Gouse</td>
                             <td>walton@saucedit.com</td>
@@ -996,7 +1116,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Louie</td>
                             <td>McGee</td>
                             <td>walton@saucedit.com</td>
@@ -1022,7 +1147,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Kadin</td>
                             <td>Workman</td>
                             <td>walton@saucedit.com</td>
@@ -1049,7 +1179,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Omar</td>
                             <td>Siphron</td>
                             <td>walton@saucedit.com</td>
@@ -1075,7 +1210,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Miracle</td>
                             <td>Carder</td>
                             <td>walton@saucedit.com</td>
@@ -1101,7 +1241,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Aspen</td>
                             <td>Rhiel Madsen</td>
                             <td>walton@saucedit.com</td>
@@ -1127,7 +1272,12 @@
                             </td>
                         </tr>
                         <tr>
-                            <td><input type="checkbox" name=""></td>
+                            <td>
+                                <label class="checkbox__container">&nbsp;
+                                    <input type="checkbox">
+                                    <span class="checkmark"></span>
+                                </label>
+                            </td>
                             <td>Marley</td>
                             <td>Vetrovs</td>
                             <td>walton@saucedit.com</td>
