--- a/pages/new-listing.html
+++ b/pages/new-listing.html
@@ -275,8 +275,10 @@
                     <span>Add questions</span>
                 </div>
                 <div class="publish__job">
-                    <input type="checkbox" name="job" id="job">
-                    <label for="job">Publish to Jobs Board</label>
+                    <label class="checkbox__container">Publish to Jobs Board
+                        <input type="checkbox">
+                        <span class="checkmark"></span>
+                    </label>
                 </div>
             </div>
             <div class="listing__submit">
