fix and left two page

--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -1674,7 +1674,7 @@
     <!--Modal Start-->
 
     <!-- Modal -->
-    <div class="modal fade write__model" id="write-note" data-bs-backdrop="static" data-bs-keyboard="false"
+    <div class="modal fade write__model" id="write-note" data-bs-backdrop="false" data-bs-keyboard="false"
          tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
